--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "css-has-pseudo": "^4.0.2",
-    "postcss": "^8.4.21",
+    "grunt-postcss": "^0.9.0",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0"
   }
 }
